fluxcd/base/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: keycloak
          image: docker.io/kokuwaio/keycloak
          imagePullPolicy: IfNotPresent
          args: [start, --import-realm]
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9000
          startupProbe:
            httpGet:
              path: /health
              port: management
            initialDelaySeconds: 30
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health
              port: management
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 120
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: kc-tmp
              mountPath: /opt/keycloak/data/tmp
              subPath: tmp
            - name: data
              mountPath: /app/data
            - name: realm
              mountPath: /app/data/import/realm.json
              subPath: realm.json
              readOnly: true
            - name: themes
              mountPath: /app/themes
              readOnly: true
            - name: tmp
              mountPath: /tmp
      automountServiceAccountToken: false
      enableServiceLinks: false
      terminationGracePeriodSeconds: 10
      volumes:
        - name: kc-tmp
          emptyDir: {}
        - name: data
          emptyDir: {}
        - name: themes
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: realm
          configMap:
            name: keycloak-realm
